--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='/css/index.css' rel="stylesheet">
-    <title>Document</title>
+    <title>Donating to our hospitals during the COVID crisis</title>
 </head>
 <body>
+    <div class="toptoolbar">
+        <a class="active" href="index.html">COVID-19</a>
+        <a href="secondpage.html">The Alzheimer’s Association</a>
+        <a href="thirdpage.html">Scholarship America</a>
+      </div>
+<h1> As a country, we have to ensure our hospitals have the materials necessary to fight the COVID-19 outbreak. </h1>
+<h3>Due to the COVID-19 crisis, our hospitals need supplies more than ever. Our hospitals are in need of N95 masks, hand sanatizer, and gloves. We <b> must</b> protect our healthcare workers at all costs.</h3>
+<div>
+    <br><img src="/img/covid1.jpg" alt="Covid" style="width:650px;height:550px;"/>
+</div>
+<h2>If you can donate, please drop off masks can be homemade, gloves, and N95 masks at your nearest hospital!!! </h2>
+    
     
 </body>
 </html>
