Added a statement about scholarships to page 3

--- a/thirdpage.html
+++ b/thirdpage.html
@@ -10,6 +10,10 @@
         <a href="secondpage.html">The Alzheimer’s Association</a>
         <a href="thirdpage.html">Scholarship America</a>
       </div>
+      <p>Scholarship America works directly with students, parents, 
+          colleges, businesses and communities to help students 
+          fulfill their college dreams. Since it was founded in 1958, 
+          Scholarship America has distributed $4.3 billion to more than 2.6 million students … and counting.</p>
     
     
 
