--- a/thirdpage.html
+++ b/thirdpage.html
@@ -12,16 +12,16 @@
 </head>
 <body>
     <div class="toptoolbar">
-        <a class="active" href="index.html">COVID-19</a>
+        <a href="index.html">COVID-19</a>
         <a href="secondpage.html">The Alzheimer’s Association</a>
-        <a href="thirdpage.html">Scholarship America</a>
+        <a class="active" href="thirdpage.html">Scholarship America</a>
       </div>
-    <img src="img/covid19image.jpg" alt="covid19 Icon" >  
-  <p>Scholarship America works directly with students, parents, 
+  <h3>Scholarship America works directly with students, parents, 
           colleges, businesses and communities to help students 
           fulfill their college dreams. Since it was founded in 1958, 
-          Scholarship America has distributed $4.3 billion to more than 2.6 million students … and counting.</p>
+          Scholarship America has distributed $4.3 billion to more than 2.6 million students … and counting.</h3>
+          <img src="img/money.jpg" alt="covid19 Icon" > 
 
-    
+    <h1> Please donate today, we want to ensure every kid is able to earn the education they deserve.</h1>
 </body>
 </html>
