--- a/secondpage.html
+++ b/secondpage.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div class="toptoolbar">
-        <a class="active" href="index.html">COVID-19</a>
-        <a href="secondpage.html">The Alzheimer’s Association</a>
+        <a href="index.html">COVID-19</a>
+        <a class="active" href="secondpage.html">The Alzheimer’s Association</a>
         <a href="thirdpage.html">Scholarship America</a>
       </div>
       <h1>The Alzheimer's Association aims to cure an awful disaese that can affect all ages, not just the elderly . </h1>
-<h3>Due to the COVID-19 crisis, our hospitals need supplies more than ever. Our hospitals are in need of N95 masks, hand sanatizer, and gloves. We <b> must</b> protect our healthcare workers at all costs.</h3>
+<h3>Alzheimer's is a very serious disease, watching our loved ones lose their memory is a very scary thing. </h3>
 <div>
     <br><img src="/img/alz.jpg" alt="Covid" style="width:650px;height:550px;"/>
 </div>
-<h2>If you can donate, please drop off masks can be homemade, gloves, and N95 masks at your nearest hospital!!! </h2>
+<h2>Your donation will allow us to continue to find a cure to fight Alzheimer's disease. Please donnate today, anything helps! </h2>
     
     
 </body>
