--- a/thirdpage.html
+++ b/thirdpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link href="/css/thirdpage.css" rel="stylesheet">
+    <link href="css/thirdpage.css" rel="stylesheet">
     <style> 
     img {
         width: 28% ;
