fixing css errors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1> As a country, we have to ensure our hospitals have the materials necessary to fight the COVID-19 outbreak. </h1>
 <h3>Due to the COVID-19 crisis, our hospitals need supplies more than ever. Our hospitals are in need of N95 masks, hand sanatizer, and gloves. We <b> must</b> protect our healthcare workers at all costs.</h3>
 <div>
-    <br><img src="/img/covid1.jpg" alt="Covid" style="width:650px;height:550px;"/>
+    <br><img src="img/covid1.jpg" alt="Covid" style="width:650px;height:550px;"/>
 </div>
 <h2>If you can donate, please drop off masks can be homemade, gloves, and N95 masks at your nearest hospital!!! </h2>
     
