--- a/secondpage.html
+++ b/secondpage.html
@@ -15,7 +15,7 @@
       <h1>The Alzheimer's Association aims to cure an awful disaese that can affect all ages, not just the elderly . </h1>
 <h3>Alzheimer's is a very serious disease, watching our loved ones lose their memory is a very scary thing. </h3>
 <div>
-    <br><img src="/img/alz.jpg" alt="Covid" style="width:650px;height:550px;"/>
+    <br><img src="img/alz.jpg" alt="Covid" style="width:650px;height:550px;"/>
 </div>
 <h2>Your donation will allow us to continue to find a cure to fight Alzheimer's disease. Please donnate today, anything helps! </h2>
     
