--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='css/index.css' rel="stylesheet">
+    <link href='css/first.css' rel="stylesheet">
     <title>Donating to our hospitals during the COVID crisis</title>
 </head>
 <body>
